--- a/views/index.pug
+++ b/views/index.pug
@@ -2,8 +2,8 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #[title], a very basic Express website developed as a tutorial example.sidebar-nav
-
+  p Welcome to #[title], a very basic Express website developed as a tutorial example
+  p 这是一个非常基础的本地图书馆网页,基于NodeJS,pug实现
   h1 Dynamic content
 
   if error
